# vacation

./: .gitignore  CMakeLists.txt  DESIGN.md  Makefile  README.md  vacation.c  vacation.h  vacation_calculator.html  vacation_days.c  vacation_test.c
src/: main.c  test_vacation.c  vacation.h
